# wasixcc

./: Cargo.toml  GITHUB_ACTION_EXAMPLES.md  README.md  action.yml  wasix-toolchain.cmake  wasmer.toml
.github/workflows/: release.yml  test-action.yml
src/: args.rs  compiler.rs  download.rs  lib.rs  main.rs  sysroot_download.rs  wasixccenv.rs
