[package]
name = "wasixcc"
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/wasix-org/wasixcc"
description = "C/C++ compiler for the WASIX platform"

[[bin]]
name = "wasixcc"
required-features = ["tracing-subscriber"]

[dependencies]
anyhow = "1.0.98"
regex = "1.11.1"
tempfile = "3.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
] }

# Required for the sysroot download
flate2 = "1.1.2"
tar = "0.4.44"
serde = { version = "1.0.219", features = ["derive"] }

# Pinned dependencies for WASIX builds
getrandom = "=0.3.3"
reqwest = { version = "=0.12.22", features = ["blocking", "json"] }
tower = "=0.5.2"
tower-layer = "=0.3.3"
tower-service = "=0.3.3"

[patch.crates-io]
getrandom = { git = "https://github.com/wasix-org/getrandom", branch = "wasix-0.3.3" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "wasix-0.6.0" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.47.0" }
tokio-rustls = { git = "https://github.com/wasix-org/tokio-rustls.git", branch = "wasix-0.26.2" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "wasix-1.6.0" }
hyper-util = { git = "https://github.com/wasix-org/hyper-util.git", branch = "wasix-0.1.16" }
hyper-rustls = { git = "https://github.com/wasix-org/hyper-rustls.git", branch = "wasix-0.27.7" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "wasix-0.23.31" }
reqwest = { git = "https://github.com/wasix-org/reqwest", branch = "wasix-0.12.22" }
tower = { git = "https://github.com/wasix-org/tower.git", branch = "wasix-0.5.2" }
tower-layer = { git = "https://github.com/wasix-org/tower.git", branch = "wasix-0.5.2" }
tower-service = { git = "https://github.com/wasix-org/tower.git", branch = "wasix-0.5.2" }

[features]
bin = ["tracing-subscriber"]
tracing-subscriber = ["dep:tracing-subscriber"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_vendor, values("wasmer"))',
] }
